# Agent-deployment-microservice

./: .env.example  .gitattributes  API_GUIDE.md  Dockerfile  Jenkinsfile  MICROSERVICE_GUIDE.md  Makefile  README.md  README_Service.md  compose.yml  deployment.env  mlflow_register_and_wrap.py  pyproject.toml  requirements.txt  run_core_tests.py  run_tests.py
helm/: Chart.yaml  readme.md  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
mlflow/: .env.example  compose.yml  requirements.txt
monitor/: client.py  compose.yml  metrics.py  prometheus.yml
monitor/grafana/dashboards/: fastapi-dashboard.json
notebook/: 000-model_finetuning.ipynb  001-model_calling.ipynb  evaluation.ipynb  example_function_tuning.ipynb  notebook.ipynb
notebook/model/: LICENSE.txt  MLmodel  conda.yaml  registered_model_meta  requirements.txt
notebook/model/components/tokenizer/: added_tokens.json  chat_template.jinja  special_tokens_map.json  tokenizer_config.json
notebook/model/model/: config.json  generation_config.json  special_tokens_map.json  tokenizer_config.json
src/: DockerFile  api.py  chat_service.py  docker-compose.yaml  dto.py  main.py  requirements.txt
src/app/: .env.example
src/app/chat_service/: main.py
src/app/chat_service/api/: api.py
src/app/chat_service/dto/: models.py
src/app/chat_service/schema/: model_dto.py
src/app/chat_service/services/: chat_service.py
src/app/chat_service/tests/: conftest.py  test_api.py  test_integration.py  test_minimal.py
src/app/core/: config.py
src/app/tests/: test_api.py
src/utils/: data_prep.py  model_downloader.py  peft_lora_config.py
(+11 files in other folders)
